--- a/nlp.html
+++ b/nlp.html
@@ -73,6 +73,11 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 21, 2019 ... Create ML models for Advanced OCR and Cognitive Data Extraction capability 
+as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...</p>
+<hr/>
 <h5><a href='https://sparkcognition.applytojob.com/apply/CbTOgT6iN4/Front-End-Engineer-DeepNLP'>Front End Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to Front End Engineer - DeepNLP at SparkCognition in Austin, TX.</p>
@@ -125,7 +130,7 @@
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 7, 2019 ... The Software Engineer will use machine learning to generate simulated content 
 on various websites and social media platforms that will then be used for?...</p>
@@ -343,7 +348,7 @@ machine learning to surface new knowledge. We are a VC-backed tech company
 processamento de linguagem natural, analisando dados e criando algoritmos 
 que?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj?referred_by=182589'>Senior Software Engineer (NLP) at Visible Alpha</a></h5> 
+<h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj?referred_by=182589'>Senior Software Engineer (NLP) at Visible Alpha</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
@@ -364,7 +369,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
+<h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
       Natural Language Processing Data Scientist - Adarga
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -430,7 +435,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
@@ -465,7 +470,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-08-06</p>
 <hr/>
-<h5><a href='https://fractalanalytics.applytojob.com/apply/KLOVi1n1C9/Senior-Data-Scientist-NLP'>Senior Data Scientist, NLP - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fractalanalytics.applytojob.com/apply/KLOVi1n1C9/Senior-Data-Scientist-NLP'>Senior Data Scientist, NLP - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Senior Data Scientist, NLP at Fractal Analytics in Mumbai, Maharashtra, 
 India.</p>
@@ -486,7 +491,7 @@ India.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 22, 2019 ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
-<h5><a href='https://amplexor.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amplexor.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-30</p>
 <hr/>
@@ -497,11 +502,6 @@ India.</p>
 <h5><a href='https://jobs.lever.co/homex/8515d4c8-ef46-4c5b-add6-b6df34de72ce'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rimeto/bdca896f-e7e7-4f27-a894-41b47c729c63'>Rimeto - Software Engineer, Search Ranking & NLP</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>1 day ago ... Bonus Points. Experience with ElasticSearch, GraphQL, or React. Background in 
-Machine Learning or Statistics. Why you'd love working here. Everyone at?...</p>
 <hr/>
 
 
